--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,9 +1,11 @@
-<h1>All the Challenges That There Are</h1>
-<% @challenges.each do |challenge| %>
-<h3><%= challenge.title %></h3>
-<form>
-	<% challenge.releases.times do |i| %>
-	<input type="checkbox"> Release <%=i%><br>
+<article class="xviews xchallenges xindex">
+	<h1>All the Challenges That There Are</h1>
+	<% @challenges.each do |challenge| %>
+	<h3><%= challenge.title %></h3>
+	<form>
+		<% challenge.releases.times do |i| %>
+		<input type="checkbox"> Release <%=i%><br>
+		<% end %>
+	</form>
 	<% end %>
-<form>
-<% end %>
+</article>
