--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,11 @@
 Hello
 
 
-<%= link_to "Log In/Sigh Up", :developer_auth %>
+<%= link_to "Log In/Sigh Up", :github_auth %>
 
 <b>LOGOUT---> </b>
 <%= link_to "Logout", :logout %>
+
+<% if logged_in? %>
+  <p> Hey, <%= current_user.username %>!</p>
+<% end %>
