just commiting so i can pull

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,9 +3,10 @@ Hello
 
 <%= link_to "Log In/Sigh Up", :github_auth %>
 
-<b>LOGOUT---> </b>
-<%= link_to "Logout", :logout %>
+
 
 <% if logged_in? %>
-  <p> Hey, <%= current_user.username %>!</p>
+<b>LOGOUT---> </b>
+<%= link_to "Logout", :logout %>
+  <p> Hey fuck, <%= current_user.username %>!</p>
 <% end %>
