--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,4 +1,4 @@
-<article class="xviews xnotes xindex">
+<article class="xviews xnotes xshow">
   <h1>title: <%= @note.title %></h1>
   <h1>body: <%= @note.body %></h1>
 </article>
