--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,5 @@
 <article class="xviews xnotes xindex">
-  <h1>All the Challenges That There Are</h1>
+  <h1>All the Notes That There Are</h1>
 
 
   <h2>Blocker</h2>
