makes notes nested in scoreboard, adds broken forms

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -5,21 +5,21 @@
   <h2>Blocker</h2>
   <% @notes.each do |note| %>
     <% if note.note_type.downcase == 'b' %>
-      <h3>  <%= link_to "#{note.title}", note_path(note) %> </h3>
+      <h3>  <%= link_to "#{note.title}", scoreboard_note_path(@scoreboard, note) %> </h3>
     <% end %>
   <% end %>
 
   <h2>Ah ha</h2>
   <% @notes.each do |note| %>
     <% if note.note_type.downcase == 'a' %>
-      <h3>  <%= link_to "#{note.title}", note_path(note) %> </h3>
+      <h3>  <%= link_to "#{note.title}", scoreboard_note_path(@scoreboard, note) %> </h3>
     <% end %>
   <% end %>
 
   <h2>Feedback</h2>
   <% @notes.each do |note| %>
     <% if note.note_type.downcase == 'f' %>
-    <h3>  <%= link_to "#{note.title}", note_path(note) %> </h3>
+    <h3>  <%= link_to "#{note.title}", scoreboard_note_path(@scoreboard, note) %> </h3>
     <% end %>
   <% end %>
 </article>
