--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,13 @@ table {
 /*--------------END RESET---------------*/
 
 
+
+
+/*George's Color Schema*/
+/*https://s-media-cache-ak0.pinimg.com/564x/30/00/a0/3000a0831d33fb624691b50b7c6b4dc0.jpg*/
+
+
+
 a{
   text-decoration: none;
 
@@ -99,6 +106,7 @@ a{
 body{
   background:url(starry-night-sky.jpg);
   color:white;
+  height:1000px;
  /* font-size: 4em;*/
 }
 .tester{
@@ -115,8 +123,8 @@ body{
 .gitHubLogo{
   background:url(gitHubLogo2017.png);
   background-size: cover;
-  width:75px;
-  height:75px;
+  width:55px;
+  height:55px;
   float:left;
   margin-top: 0px;
 
@@ -125,23 +133,48 @@ body{
 .gitHubBtn{
   display: block;
   background-color: rgba(135,80,161,0.8);
-  width: 350px;
-  height: 75px;
+  width: 280px;
+  height: 60px;
   color:#f8f0e3;
-
+  margin: 0 auto;
   padding: 10px;
   border-radius: 10px;
   box-shadow:1px 1px 1px #888888;
-  float: right;
-  margin-right: 10px;
+  /*float: right;*/
+  /*margin-right: 10px;*/
+
+
 }
 .gitHubBtn:hover{
   background-color: rgba(135,80,161,0.7);
 }
 .logText{
   float: right;
-  font-size: 1.7em;
+  font-size: 1.4em;
   margin-top: 20px;
   font-family: 'Orbitron', sans-serif;
   text-shadow: 2px 2px rgba(0,0,0,0.8);
+}
+
+.beforeSwipe{
+  background-color: rgba(255,255,255,0.8);
+  width:95%;
+  height:1000px;
+  margin-top: 10px;
+  margin-left: -100%;
+  transition: margin-left 0.5s;
+  -webkit-transition: margin-left 0.5s;
+
+}
+.beforeSwipe p{
+  color:black;
+}
+
+.leftPage{
+  display: block;
+  margin-left: 0%;
+  /*margin-top: 10px;*/
+ /* width:90%;*/
+  /*height:1000px;*/
+  /*background-color: rgba(255,255,255,0.8);*/
 }
