Add migration and Scoreboard Stats

--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Daily Scoreboard</h1>
 
 Day: <%=@scoreboard.day%><br>
-Week: <%=@scoreboard.week%>
+Week: <%=@scoreboard.week%><br>
+Phase: <%=@scoreboard.phase%><br>
+Today's Points: <%=@scoreboard.day_points%><br>
