--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,13 @@
 <h1>Hey, User!</h1>
 
-Level <%=@user.level%>
-Total Score: <%=@user.total_score%>
+<p>Level <%=@user.level%></p>
+<p>Total Score: <%=@user.total_points%></p>
+<br>
+<% if @scoreboard %>
+	<p>Score: <%=@scoreboard.day_points%></p>
+	<p>Commits: <%=@scoreboard.commits%></p>
+<%end%>
 
-Score: <%=@scoreboard.daily_score%>
-Commits: <%=@scoreboard.commits%>
+
+
+
