--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,25 +156,39 @@ body{
   text-shadow: 2px 2px rgba(0,0,0,0.8);
 }
 
-.beforeSwipe{
+.beforeSwipeLeft{
+  float:left;
   background-color: rgba(255,255,255,0.8);
   width:95%;
   height:1000px;
   margin-top: 10px;
   margin-left: -100%;
+
   transition: margin-left 0.5s;
   -webkit-transition: margin-left 0.5s;
 
 }
-.beforeSwipe p{
+.beforeSwipeLeft p, .beforeSwipeRight p{
   color:black;
 }
 
 .leftPage{
   display: block;
   margin-left: 0%;
+
   /*margin-top: 10px;*/
  /* width:90%;*/
   /*height:1000px;*/
   /*background-color: rgba(255,255,255,0.8);*/
+}
+
+.home{
+  float:none;
+  transition: margin-left 0.5s;
+  -webkit-transition: margin-left 0.5s;
+}
+
+.afterSwipeLeftHome{
+  margin-right: -100%;
+  float:right;
 }
