--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,10 @@
 
-<%= render partial: '/header' %>
+<%#= render partial: '/header' %>
+<article id="home" class="home">
+<h1 style="text-align: center; font-size: 3em">Landing Page</h1>
+<h1 style="text-align: center; font-size: 3em">Landing Page</h1>
+<h1 style="text-align: center; font-size: 3em">Landing Page</h1>
+<h1 style="text-align: center; font-size: 3em">Landing Page</h1>
+</article>
+
+
