Add details to make scoreboards and challenges accessible

--- a/app/views/scoreboards/_form.html.erb
+++ b/app/views/scoreboards/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for :scoreboard, url:scoreboards_path do |f| %>
-	<%= f.label :week %>
-	<%= f.select(:week, options_for_select([1,2,3,4,5,6,7,8,9])) %><br>
-	<%= f.label :day %>
-	<%= f.select(:day, options_for_select(["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Weekend"]))%><br>
-	<%= f.submit "Let's Git It!" %>
+	<p><%= f.label :week %>
+	<%= f.select(:week, options_for_select([1,2,3,4,5,6,7,8,9])) %></p>
+	<p><%= f.label :day %>
+	<%= f.select(:day, options_for_select(["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Weekend"]))%></p>
+	<p><%= f.label :cohort %>
+	<%= f.select(:cohort, options_for_select(["Jackrabbits", "Coyotes", "Otters", "Squirrels", "Fireflies", "Foxes"])) %></p>
+	<p><%= f.submit "Let's Git It!" %></p>
 <%end%> 
