--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -5,3 +5,6 @@ Day: <%=@scoreboard.day%><br>
 Week: <%=@scoreboard.week%><br>
 Phase: <%=@scoreboard.phase%><br>
 Today's Points: <%=@scoreboard.day_points%><br>
+Commits: <%=@scoreboard.commits%>
+
+<%= render :git %>
