--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -8,7 +8,13 @@
 
 
  	 	<p> Hey, <%= current_user.username %>!</p><br>
-		<p> <%= @github_response  %></p>
+
+
+		<p> <%= @github_response  %></p><br><br>
+
+		<%# @github_response.each do |x|  %>
+		<%#= p x %>
+		<%# end %>
 
  	<%else%>
 		<%#= link_to "", :github_auth, class: "gitHubLogIn" %>
