--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   </head>
 
   <body id="body">
+  <div class="fixSafariOverflow">
     <%= render partial: '/header' %>
     <%= yield %>
     <div id="leftPage" class="beforeSwipeLeft">
@@ -29,6 +30,11 @@
       <p>More Shit</p>
     </div><!-- End leftPage -->
     <div id="rightPage" class="beforeSwipeRight">
-
+      <p>Right page shit right page shit</p>
+      <p>Right page shit right page shit</p>
+      <p>Right page shit right page shit Right page shit right page shit Right page shit right page shit Right page shit right page shit Right page shit right page shit Right page shit right page shit Right page shit right page shit Right page shit right page shit</p>
+      <p>Right page shit right page shit</p>
+    </div>
+  </div> <!-- END fixSafariOverflow -->
   </body>
 </html>
