--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -10,11 +10,11 @@
  	 	<p> Hey, <%= current_user.username %>!</p><br>
 
 
-		<p> <%#= @github_response.size  %></p><br><br>
+		<p> <%= @github_response %></p><br><br>
 
 		<%# @github_response.each do |x|  %>
 			<%# x.each do |d|  %>
-			<%#= p d %>
+			<%#= p x %>
 			<%# end %>
 		<%# end %>
 
