--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -9,8 +9,8 @@
 
  	 	<p> Hey, <%= current_user.username %>!</p><br>
 
+		<img src="<%= @avatar %>" alt="Smiley face" height="150" width="150">
 
-		<p> <%= @github_response  %></p><br><br>
 
 		<%# @github_response.each do |x|  %>
 		<%#= p x %>
