--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -1,3 +1,5 @@
+<article id="home" class="home">
+
 <h1>Daily Scoreboard</h1>
 
 
@@ -10,4 +12,5 @@ Commits: <%=current_scoreboard.commits%>
 <% if @scoreboard.challenges %>
 	<%= render "scoreboard_challenges"%>
 <% end %>
-<%= render "users/ee_buttons" %>
+<%#= render "users/ee_buttons" %>
+</article>
