--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Hey, User!</h1>
 
-<p>Level <%=@user.level%></p>
-<p>Total Score: <%=@user.total_points%></p>
+<p>Level <%#=@user.level%></p>
+<p>Total Score: <%#=@user.total_points%></p>
 <br>
 <% if @scoreboard %>
 	<p>Score: <%=@scoreboard.day_points%></p>
