--- a/app/views/scoreboards/new.html.erb
+++ b/app/views/scoreboards/new.html.erb
@@ -1,6 +1,6 @@
-<article id="home" class="home">
+<!-- <article id="home" class="home"> -->
 	<h1>Start a New Game</h1>
 
 <%=render "form"%>
 
-</article>
+<!-- </article> -->
