--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,5 +1,5 @@
 <article class="xviews xchallenges xindex">
-	<h1>All the Challenges That There Are</h1>
+	<h1>Challenges</h1>
 	<% @challenges.each do |challenge| %>
 	<h3><%= challenge.title %></h3>
 	<form>
