--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= yield %>
     <div id="leftPage" class="beforeSwipeLeft">
       <% if valid_scoreboard %>
-        <%= render partial: 'users/ee_buttons'%>
+        <%= render template: 'users/index'%>
       <% end %>
     </div><!-- End leftPage -->
     <div id="rightPage" class="beforeSwipeRight">
