--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,68 +92,100 @@ table {
 
 
 
-a{
-  text-decoration: none;
-}
 
-@import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900');
+
+/*@import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900');*/
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
+
 @font-face {
   font-family: 'gitHub';
   src:url(asset-path('COLLEGIA.ttf'));
 }
 
 body{
-  background:url(starry-night-sky.jpg);
-  color:white;
+ /* background:url(starry-night-sky.jpg);*/
+  color:#7d8485;
   height:1000px;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
+a{
+  text-decoration: none;
+  color:#7d8485;
+}
+
+.xheader nav{
+  background-color: rgba(0,0,0,0.1);
+  height:60px;
+}
+.xheader nav li{
+  float:right;
+/*  margin-right:20px;
+  padding-top: 15px;*/
+  padding:15px;
+  padding-top: 20px;
+  padding-bottom:22px;
+}
+.xheader nav li:hover{
+  background-color: rgba(0,0,0,0.2);
+  border-bottom: red solid 2px;
+
+}
+/*.gitLi*/
+.xheader nav li.gitLi{
+  padding-top: 15px;
+  padding-bottom:18px;
+  margin-right:15px;
+}
 .fixSafariOverflow{
   overflow-x:hidden;
   max-width: 100%;
 }
 
 .tester{
-  font-family: 'gitHub';
-  font-family: 'Orbitron', sans-serif;
+ /* font-family: 'gitHub';
+  font-family: 'Orbitron', sans-serif;*/
   /*font-family:"Comic Sans MS", cursive, sans-serif;*/
 }
 
-.xheader{
+/*.xheader{
   margin-top: 10px;
-}
+}*/
 
 .gitHubLogo{
   background:url(gitHubLogo2017.png);
   background-size: cover;
-  width:55px;
-  height:55px;
+  width:25px;
+  height:25px;
   float:left;
-  margin-top: 0px;
+  /*margin-top: 0px;*/
 }
 
 .gitHubBtn{
-  display: block;
-  background-color: rgba(135,80,161,0.8);
-  width: 280px;
-  height: 60px;
-  color:#f8f0e3;
-  margin: 0 auto;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow:1px 1px 1px #888888;
+ /* padding-top: 2px;*/
+  /*display: block;*/
+  /*background-color: rgba(135,80,161,0.8);*/
+/*  width: 280px;
+  height: 60px;*/
+/*  color:#f8f0e3;*/
+  /*margin: 0 auto;*/
+  /*padding: 10px;*/
+  /*border-radius: 10px;*/
+ /* box-shadow:1px 1px 1px #888888;*/
 }
 
 .gitHubBtn:hover{
-  background-color: rgba(135,80,161,0.7);
+ /* background-color: rgba(135,80,161,0.7);*/
 }
 
 .logText{
-  float: right;
-  font-size: 1.4em;
-  margin-top: 20px;
-  font-family: 'Orbitron', sans-serif;
-  text-shadow: 2px 2px rgba(0,0,0,0.8);
+  float: left;
+  font-weight: 600;
+  margin-top:5px;
+  /*font-size: 1.4em;*/
+  /*margin-top: 20px;*/
+  /*font-family: 'Orbitron', sans-serif;*/
+  /*text-shadow: 2px 2px rgba(0,0,0,0.8);*/
 }
 
 .beforeSwipeLeft{
