--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,44 +113,38 @@ a{
   text-decoration: none;
   color:#7d8485;
 }
-
-.xheader nav{
+/*---------NAV BAR START-------*/
+nav.xheader {
   background-color: rgba(0,0,0,0.1);
   height:60px;
 }
-.xheader nav li{
+
+nav.xheader li{
   float:right;
-/*  margin-right:20px;
-  padding-top: 15px;*/
   padding:15px;
   padding-top: 20px;
   padding-bottom:22px;
 }
-.xheader nav li:hover{
+
+nav.xheader  li:hover{
   background-color: rgba(0,0,0,0.2);
   border-bottom: red solid 2px;
-
 }
-/*.gitLi*/
-.xheader nav li.gitLi{
+
+nav.xheader  li.gitLi{
   padding-top: 15px;
   padding-bottom:18px;
   margin-right:15px;
 }
+
 .fixSafariOverflow{
   overflow-x:hidden;
   max-width: 100%;
 }
 
 .tester{
- /* font-family: 'gitHub';
-  font-family: 'Orbitron', sans-serif;*/
-  /*font-family:"Comic Sans MS", cursive, sans-serif;*/
+ /*XXXXXXXXXXX*/
 }
-
-/*.xheader{
-  margin-top: 10px;
-}*/
 
 .gitHubLogo{
   background:url(gitHubLogo2017.png);
@@ -161,36 +155,20 @@ a{
   /*margin-top: 0px;*/
 }
 
-.gitHubBtn{
- /* padding-top: 2px;*/
-  /*display: block;*/
-  /*background-color: rgba(135,80,161,0.8);*/
-/*  width: 280px;
-  height: 60px;*/
-/*  color:#f8f0e3;*/
-  /*margin: 0 auto;*/
-  /*padding: 10px;*/
-  /*border-radius: 10px;*/
- /* box-shadow:1px 1px 1px #888888;*/
-}
-
-.gitHubBtn:hover{
- /* background-color: rgba(135,80,161,0.7);*/
-}
-
 .logText{
   float: left;
   font-weight: 600;
   margin-top:5px;
-  /*font-size: 1.4em;*/
-  /*margin-top: 20px;*/
-  /*font-family: 'Orbitron', sans-serif;*/
-  /*text-shadow: 2px 2px rgba(0,0,0,0.8);*/
 }
+/*---------NAV BAR START-------*/
 
+.home{
+  background-color: red;
+  height: 500px;
+}
 .beforeSwipeLeft{
   float:left;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(0,0,0,0.5);
   width:95%;
   height:1000px;
   margin-top: 10px;
@@ -230,7 +208,7 @@ a{
 
 .beforeSwipeRight{
   float:right;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(0,0,0,0.5);
   width:95%;
   margin-left: 5%;
   height:1000px;
