--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -1,40 +1,24 @@
 <nav class="xheader">
-	<% if logged_in? %>
-		<%#= link_to "Logout", :logout %>
-    <nav>
-      <ul>
-
-        <li><%= link_to :logout, class: "gitHubBtn" do %>
+  <ul>
+  	<% if logged_in? %>
+  		<%#= link_to "Logout", :logout %>
+      <li class="gitLi"><%= link_to :logout, class: "gitHubBtn" do %>
           <div class="gitHubLogo"></div>
           <div class="logText">Logout</div>
-        </li>
+      </li>
       <% end %>
-
-        <li>RightPage</li>
-        <li>LeftPage</li>
-
-      </ul>
-      </nav>
-
-		<%# @github_response.each do |x|  %>
-		<%#= p x %>
-		<%# end %>
-
- 	<%else%>
-		<%#= link_to "", :github_auth, class: "gitHubLogIn" %>
-<nav>
-  <ul>
-    <li class="gitLi"><%= link_to :github_auth, class: "gitHubBtn" do %>
+  		<%# @github_response.each do |x|  %>
+  		<%#= p x %>
+  		<%# end %>
+   	<%else%>
+  		<%#= link_to "", :github_auth, class: "gitHubLogIn" %>
+      <li class="gitLi"><%= link_to :github_auth, class: "gitHubBtn" do %>
         <div class="gitHubLogo"></div>
         <div class="logText">Log in with GitHub</div>
       </li>
-    <% end %>
-        <a href="#"><li>RightPage</li></a>
-        <a href="#"><li>LeftPage</li>
-        </a>
-
-      </ul>
-      </nav>
-
-	<% end %>
+      <% end %>
+  	<% end %> <!-- END IF ELSE -->
+    <a href="#"><li>RightPage</li></a>
+    <a href="#"><li>LeftPage</li></a>
+  </ul>
 </nav>
