--- a/app/views/scoreboards/_gh_user_data.html.erb
+++ b/app/views/scoreboards/_gh_user_data.html.erb
@@ -1,6 +1,8 @@
-<p> Hey, <%= current_user.username %>!</p><br>
+
+
+<p><%= current_user.username %>, AKA Bad ass coder</p>
  	 	<p> Your email <%= current_user.user_hash['extra']['raw_info']['email'] %>!</p><br>
  	 	<p> Total private repos <%=  current_user.user_hash['extra']['raw_info']['total_private_repos'] %>!</p><br>
  	 	<p> Total public repos <%=  current_user.user_hash['extra']['raw_info']['public_repos'] %>!</p><br>
 
-		<img src="<%= current_user.picture_url %>" alt="Smiley face" height="150" width="150">
+
