--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,11 @@
-<h1>Let's Git It!</h1>
+<!-- views/users/index.htm.erb -->
+
+<!-- <h1>Let's Git It!</h1> -->
+<article class="views users index">
+<img class="userPic" src="<%= current_user.picture_url %>" alt="Smiley face">
 <% if logged_in? %>
-	<p>Level <%#=@user.level%></p>
-	<p>Total Score: <%#=@user.total_points%></p>
+<!-- 	<p>Level <%#=@user.level%></p>
+	<p>Total Score: <%#=@user.total_points%></p> -->
 	<%= render partial: "gh_user_data" %>
 <% end %>
 <% if @scoreboard %>
@@ -11,6 +15,6 @@
 
 <%= render partial: "ee_buttons" %>
 
-
+</article>
 
 
