--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -13,4 +13,5 @@ Commits: <%=current_scoreboard.commits%>
 	<%= render "scoreboard_challenges"%>
 <% end %>
 <%#= render "users/ee_buttons" %>
+	<%= link_to "download", scoreboards_download_path %>
 </article>
