Rearrange views for game logic

--- a/app/views/scoreboards/new.html.erb
+++ b/app/views/scoreboards/new.html.erb
@@ -1,8 +1,12 @@
 <!-- views/scoreboards/new -->
 
 <!-- <article id="home" class="home"> -->
+<% if logged_in? %>
 	<h1>Start a New Game</h1>
 
-<%=render "form"%>
-
+	<%=render "form"%>
+<% else %>
+	<h1>Welcome to Let's Git It!</h1>
+	<p> Log in with Git Hub to start a new game.</p>
+<% end %>
 <!-- </article> -->
