Add some right view styleing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -213,6 +213,45 @@ img.userPic{
   margin: 0 auto;
 }
 /*----------LeftPage END----------*/
+
+
+
+
+
+
+
+
+
+
+/*-----------Right Page---------- */
+.allNotes{
+  border:red solid 2px;
+  margin-right:3%;
+  margin-left:3%;
+  font-weight: 300;
+  /*font-size: 2em;*/
+}
+.allNotes h1{
+  font-size: 2.7em;
+  font-weight: 300;
+}
+.allNotes .notes-container{
+  /*font-size: 2em;*/
+}
+
+
+/*-----------Right Page END---------- */
+
+
+
+
+
+
+
+
+
+
+
 /*---------Home Loged In---------*/
 /*views/scoreboards/show*/
 .views.scoreboard.show{
