--- a/app/views/scoreboards/new.html.erb
+++ b/app/views/scoreboards/new.html.erb
@@ -1,8 +1,10 @@
 <!-- views/scoreboards/new -->
 
 <!-- <article id="home" class="home"> -->
+<div class="startGamehome">
 	<h1>Start a New Game</h1>
 
-<%=render "form"%>
+  <%=render "form"%>
+</div>
 
 <!-- </article> -->
