--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,8 @@
 <div class="views users index">
 
 <% if logged_in? %>
-<!-- 	<p>Level <%#=@user.level%></p>
-	<p>Total Score: <%#=@user.total_points%></p> -->
+	<p>Level: <%=current_user.level%></p>
+	<p>Total Score: <%=current_user.total_points%></p>
 	<%= render partial: "gh_user_data" %>
 <% end %>
 <% if @scoreboard %>
