--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -4,7 +4,7 @@
   <div class="allNotes">
   <h1>Ah Ha</h1>
   <div class='notes-container'>
-
+    <div class="Breakline"></div>
     <%= form_for [@scoreboard, @note], :html => {:class => "note-form"} do |f| %>
 
       <%= f.label :title, "Subject" %>:
@@ -18,6 +18,7 @@
   </div>
   <h1>Blockers</h1>
   <div class='notes-container'>
+    <div class="Breakline"></div>
 
 
     <%= form_for [@scoreboard, @note], :html => {:class => "note-form"} do |f| %>
@@ -33,6 +34,7 @@
 
   <h1>Feedback</h1>
   <div class='notes-container'>
+    <div class="Breakline"></div>
 
 
     <%= form_for [@scoreboard, @note], :html => {:class => "note-form"} do |f| %>
@@ -47,5 +49,6 @@
   </div>
 </div><!-- END All Notes -->
 </article>
-
+<div class="downLoadNotes">
 <%= link_to "Download Notes", scoreboards_download_path %>
+<div>
