--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -10,7 +10,7 @@
     <li>Week: <span><%=@scoreboard.week%></span></li>
     <li>Phase: <span><%=@scoreboard.phase%></span></li>
     <li>Today's Points: <span><%=@scoreboard.day_points%></span></li>
-    <li>Commits: <span><%=current_scoreboard.commits%></span></li>
+    <li>Commits: <span><%=@scoreboard.commits%></span></li>
     <% @challenges = @scoreboard.challenges %>
     </ul>
   </div>
