--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-<%= @user %>
+<%= @user.username %> <br><br><br>
+
+
+
+TOTAL DAY POINTS: <%= @total_days_points %> <br>
+AVERAGE POINTS PER DAY: <%= @total_days_points / @user_scoreboards.size %> <br>
+TOTAL COMMITS: <%= @total_commits %> <br>
+AVERAGE COMMITS PER DAY: <%= @total_commits / @user_scoreboards.size %> <br>
