--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,7 @@
 TOTAL DAY POINTS: <%= @total_days_points %> <br>
 AVERAGE POINTS PER DAY: <%= @total_days_points / @user_scoreboards.size %> <br>
 TOTAL COMMITS: <%= @total_commits %> <br>
-AVERAGE COMMITS PER DAY: <%= @total_commits / @user_scoreboards.size %> <br>
+AVERAGE COMMITS PER DAY: <%= @total_commits / @user_scoreboards.size %> <br><br>
+
+
+<%= pie_chart @user_scoreboards.group(:day).sum(:week) , width: "500px", height: "200px" %>
