--- a/app/views/scoreboards/_scoreboard_challenges.html.erb
+++ b/app/views/scoreboards/_scoreboard_challenges.html.erb
@@ -3,12 +3,12 @@
 	<h1>Challenges</h1>
 	<% @challenges.each do |challenge| %>
 	<h3><%= challenge.title %></h3>
-	<form>
-		<input type="checkbox"> Read Instructions<br>
+	<form action="/scoreboards/<%=@scoreboard.id%>/challenges/<%=challenge.id%>">
+		<input type="checkbox" class="release-checkbox"> Read Instructions<br>
 		<% challenge.releases.times do |i| %>
-		<input type="checkbox"> Release <%=i%><br>
+		<input type="checkbox" class="release-checkbox"> Release <%=i%><br>
 		<% end %>
-		<input type="checkbox"> Make Pull Request <br>
+		<input type="checkbox" class="release-checkbox"> Make Pull Request <br>
 	</form>
 	<% end %>
 </div>
