Add home and some js

--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -18,7 +18,8 @@
       </li>
       <% end %>
   	<% end %> <!-- END IF ELSE -->
-    <a href="#"><li>RightPage</li></a>
-    <a href="#"><li>LeftPage</li></a>
+    <li class="RightPageNav">RightPage</li>
+    <li class="LeftPageNav">LeftPage</li>
+    <li class="homeNav">Home</li>
   </ul>
 </nav>
