removes current_scoreboard

--- a/app/views/application/_ee_buttons.html.erb
+++ b/app/views/application/_ee_buttons.html.erb
@@ -1,18 +1,18 @@
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
   	<%= f.submit "Get to campus on time" %>
   <% end %>
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Make a commit" %>
   <% end %>
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Ask someone for help" %>
   <% end %>
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Help someone out" %>
   <% end %>
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Take a break" %>
   <% end %>
-  <%= form_for current_scoreboard, :html => {:class => "ee-btns"} do |f| %>
+  <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Give ASK Feedback" %>
   <% end %>
