--- a/app/views/users/_ee_buttons.html.erb
+++ b/app/views/users/_ee_buttons.html.erb
@@ -5,7 +5,7 @@
   <%= button_to "Take a break" %><br>
   <%= button_to "Give ASK Feedback" %><br>
 
-  <%= form_for current_scoreboard do |f| %>
+  <%= form_for @scoreboard do |f| %>
   	<%# f.hidden_field(points: 1) %>
   	<%= f.submit "Get to campus on time" %>
   <% end %>
